# ProcessYUMA

./: .gitignore  AlmOrbit_svXvt_GNSS.patch  CMakeLists.txt  ComputeDOP.cpp  ProcessYUMA.cpp  convertGalileoAlmanac.py  convertToYUMA.py  python_helpers.py  readme.md  requirements.txt
data/: almanacMultiple.alm  current.alm  kepler-input.csv
example/: 2020-07-03.xml  almanac.yuma.week0069.405504.txt  kepler-input.csv
